syntax = "proto3";

option csharp_namespace = "AgentService.Protos";

package AgentService;

service JobA {
	rpc StartJob (StartJobRequest) returns (StartJobReply);
	rpc GetJobs (EmptyInput) returns (JobListModel);
}

message StartJobRequest {
  string JobNumber = 1;
  string Status = 2;
  string MachineName = 3;
  string FolderPath = 4;
  repeated string Files = 5;
}

message StartJobReply {
  string IsStarted = 1;
}

message EmptyInput{}

message JobListModel {
  repeated JobModel Jobs = 1;
}

message JobModel {
  string Job = 1;
  string Status = 2;
}